testsuite/bsc.names/portRenaming/invalidAttrs/ready/Empty.bsv

interface Ifc;
 (* ready = "" *)
 method Bool check ();
endinterface

